# ParallelStreamCluster

./: .gitignore  .rsyncignore  CMakeLists.txt  Makefile  Makefile~  README.md  average_time.pl  calcResults.pl  copy_Bin_to_phi.sh  ff_stream_cluster  ff_stream_cluster.cpp  ff_stream_cluster.cpp~  generateInput.cpp  output.parsec  output.txt  results.txt  runFastFlow.cpp  runFastFlow.cpp.save  runFastFlow.sh  runFastFlow_FarmMap.sh  runFastFlow_noFarm.sh  runFastFlow_noFarm.sh.save  runParsec.sh  runParsec_Test.sh  runParsec_threads.sh  runRodinia_cpu.sh  runRodinia_omp.sh  runRodinia_original.sh  runTest.sh  run_farm_on_host.pl  run_farm_on_mic.pl  run_map_on_mic.pl  run_rodinia_on_mic.pl  runparsec_Test.sh  scMngmt.pl  scMngmt.sh  streamclusterMgmt.sh  streamcluster_original.cpp  streamclustermgmt  upload.sh
conf/: native.runconf  simdev.runconf  simlarge.runconf  simmedium.runconf  simsmall.runconf  streamcluster.cfg  test.runconf
parsec_streamcluster/: Makefile  streamcluster.cpp
report/report_latex/: report.aux  report.tex
report/report_latex/graphix/: datatimes.csv  datatimes.csv~  fffarmmap.simlarge.data.csv  ffmap.simlarge.data.csv  ffmap.simlarge.data.csv~  ffmap.test.data.csv  ffmap.test.data.csv~
rodinia_streamcluster/: Makefile  Makefile_host  prova  streamcluster_omp.cpp  streamcluster_original.cpp  streamcluster_original_prova.cpp
src/: #ff_stream_cluster_FarmMap.cpp#  #ff_stream_cluster_noFarm.cpp#  .#ff_stream_cluster_noFarm.cpp  Collector.cpp  Collector.h  Emitter.cpp  Emitter.h  FileStream.h  Globals.h  Helper.cpp  Helper.h  HelperStreamCluster.h  Makefile  Makefile_host  Makefile_phi  PStream.h  Points.h  SimStream.h  StreamCluster.cpp  StreamCluster.h  UtilClusters.cpp  UtilClusters.h  Worker.cpp  Worker.h  ff_sc_FarmMap.cpp  ff_stream_cluster  ff_stream_cluster.cpp  ff_stream_cluster.cpp~  ff_stream_cluster_FarmMap  ff_stream_cluster_FarmMap.cpp  ff_stream_cluster_FarmMap.old.cpp  ff_stream_cluster_FarmMap_unique.cpp  ff_stream_cluster_Map  ff_stream_cluster_Map.cpp  ff_stream_cluster_noFarm  ff_stream_cluster_noFarm.cpp  main.cpp  unique
src_map/: Makefile  ff_streamcluster_map.cpp
testResults/: farm.200chunks.simmedium.mic  farm.5000for120.mic  farm.bignative.mic  farm.native.mic  farm.native2.mic  farm.simlarge.mic  farm.simlarge.mic.newchunks  farm.simmedium.mic  ff_farm.mic.simlarge  ff_map.mic.simlarge  map.5000for120.mic  map.bignative.mic  map.native.mic  map.native2.mic  map.native2.spinwait.mic  map.simlarge.5000.mic  map.simlarge.mic  map.simmedium.mic
